# langeval

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.vi.md  LICENSE  LICENSE.vi  README.md  README.vi.md  Reddit.md
.vercel/: project.json
langeval-core/: .dockerignore  .env  .env.example  .gitignore  KAFKA_CONFIG.md  docker-compose.yml  init-db.sql  init-letsencrypt.sh
langeval-core/data-ingestion/: Cargo.toml  Dockerfile  README.md
langeval-core/data-ingestion/src/: db.rs  main.rs
langeval-core/evaluation-worker/: README.md  pyproject.toml  requirements.txt
langeval-core/evaluation-worker/app/: main.py
langeval-core/evaluation-worker/app/consumers/: kafka_consumer.py
langeval-core/evaluation-worker/app/core/: config.py
langeval-core/evaluation-worker/app/models/: schemas.py
langeval-core/evaluation-worker/app/services/: evaluator.py
langeval-core/evaluation-worker/tests/: test_evaluation.py  test_metric_factory.py
langeval-core/gen-ai-service/: README.md  pyproject.toml  requirements.txt
langeval-core/gen-ai-service/app/: main.py
langeval-core/gen-ai-service/app/api/routes/: gen_ai.py
langeval-core/gen-ai-service/app/core/: storage.py  utils.py
langeval-core/gen-ai-service/app/models/: schemas.py
langeval-core/gen-ai-service/app/services/: generators.py  optimizer.py  rag_service.py
langeval-core/gen-ai-service/tests/: test_gen_ai.py
langeval-core/identity-service/: README.md  main.py  pyproject.toml  requirements.txt
langeval-core/identity-service/api/v1/endpoints/: auth.py  workspaces.py
langeval-core/identity-service/core/: database.py  db.py  google_auth.py  security.py
langeval-core/identity-service/models/: __init__.py  models.py  user.py
langeval-core/orchestrator/: README.md  init_db.py  pyproject.toml  requirements.txt  test_ai_gen.py
langeval-core/orchestrator/app/: main.py
langeval-core/orchestrator/app/api/routes/: __init__.py  battle.py  benchmarks.py  campaigns.py
langeval-core/orchestrator/app/core/: resources.py  security.py
langeval-core/orchestrator/app/db/: engine.py  models.py  repository.py
langeval-core/orchestrator/app/models/: schemas.py
langeval-core/orchestrator/app/services/: adversarial_workflow.py  battle_arena_workflow.py  benchmark_service.py  checkpointer.py  red_teaming_workflow.py  resource_client.py  workflow.py
langeval-core/orchestrator/tests/: test_kafka_produce.py  test_redis_saver.py
langeval-core/orchestrator/tests/integration/: test_flow_cyclic.py
langeval-core/resource-service/: .env  README.md  pyproject.toml  requirements.txt
langeval-core/resource-service/app/: main.py
langeval-core/resource-service/app/api/: deps.py
langeval-core/resource-service/app/api/v1/: api.py
langeval-core/resource-service/app/api/v1/endpoints/: agents.py  battle.py  benchmarks.py  dashboard.py  knowledge_bases.py  metrics.py  models_llm.py  red_teaming.py  reviews.py  scenarios.py  traces.py
langeval-core/resource-service/app/core/: cache.py  config.py  database.py  langfuse_client.py  security.py
langeval-core/resource-service/app/models/: domain.py
langeval-core/resource-service/app/repositories/: agent.py  base.py  battle.py  kb.py  metric.py  model_llm.py  red_teaming.py  scenario.py
langeval-core/resource-service/app/services/: agent_service.py  ai_service.py  battle_service.py  benchmark_result_service.py  dashboard_service.py  kb_service.py  metric_service.py  model_service.py  red_teaming_service.py  review_service.py  scenario_service.py  trace_service.py
langeval-core/resource-service/tests/integration/: test_pagination_structure.py
langeval-core/resource-service/tests/unit/: test_validation.py
langeval-core/simulation-worker/: README.md  pyproject.toml  requirements.txt
langeval-core/simulation-worker/app/: main.py  worker.py
langeval-core/simulation-worker/app/core/: resources.py
langeval-core/simulation-worker/app/services/: adversarial.py  simulator.py
langeval-core/simulation-worker/tests/: test_simulation.py
langeval-sdk/: .env  README.md  debug_langfuse.py  inspect_langfuse.py  pyproject.toml  verify_sdk.py
langeval-sdk/langeval-sdk/: __init__.py  decorators.py
langeval-sdk/langeval-sdk/core/: client.py  context.py  security.py
langeval-sdk/langeval-sdk/integrations/: fastapi.py  flask.py  langchain.py
langeval-ui/: .env  .env.local  .eslintrc.json  .gitignore  (+8 more)
(+261 files in other folders)
