[package]
name = "data-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rdkafka = { version = "0.34", features = ["cmake-build"] }
clickhouse = { version = "0.11", features = ["tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
